// Vitest Snapshot v1

exports[`<LoadingPlaceholder /> > should render 1`] = `
<LoadingPlaceholder__StyledLoadingPlaceholder
  margin="220px"
>
  <Loader />
</LoadingPlaceholder__StyledLoadingPlaceholder>
`;

exports[`<LoadingPlaceholder /> > should render the provided message 1`] = `
<LoadingPlaceholder__StyledLoadingPlaceholder
  margin="220px"
>
  <p>
    Test Message
  </p>
  <Loader />
</LoadingPlaceholder__StyledLoadingPlaceholder>
`;
